@@ -1,3 +1,11 @@
+2016-12-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* CMakeLists.txt, INSTALL: Require libgvm_base.
+
+	* src/CMakeLists.txt: Link gvmlibs-base.
+
+	* src/gsad.c: Fix include path for pidfile.h.
+
 2016-12-02  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	* src/html/classic/img/, src/html/classic/img/cpe: Add viewBox
